--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,3 +28,8 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          WEATHER_KEY: ${{ secrets.WEATHER_KEY }}
+          RDS_PASS: ${{ secrets.RDS_PASS }}
+          RDS_HOST: ${{ secrets.RDS_HOST }}
+          NCEI_HOST: ${{ secrets.NCEI_HOST }}
+          NCEI_EMAIL: ${{ secrets.NCEI_EMAIL }}
