add basic client

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,12 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: 'us-east-1'
 
+      - name: build client
+        working-directory: 'src/client'
+        run: |
+          yarn install
+          yarn build
+
       - name: cdk deploy
         working-directory: 'infra'
         env:
