--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -23,6 +23,7 @@ torch = [
   { url = "https://download.pytorch.org/whl/cpu/torch-1.13.1-cp310-none-macosx_11_0_arm64.whl", markers = "sys_platform == 'darwin'" }
 ]
 awslambdaric = "^2.0.5"
+ipywidgets = "^8.1.0"
 
 [build-system]
 requires = ["poetry-core"]
