--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,5 +40,5 @@ jobs:
           NCEI_HOST: ${{ secrets.NCEI_HOST }}
           NCEI_EMAIL: ${{ secrets.NCEI_EMAIL }}
         run: |
-          python -m pip install -r requirements.txt
+          poetry install --no-root && poetry shell
           cdk deploy --require-approval never
