--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@types/d3-time-format": "^4.0.0",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
@@ -15,8 +16,9 @@
     "@visx/curve": "^2.1.0",
     "@visx/pattern": "^2.10.0",
     "@visx/text": "^2.12.2",
-    "@visx/xychart": "^2.16.0",
+    "@visx/xychart": "^3.3.0",
     "axios": "^1.1.3",
+    "d3-time-format": "^4.1.0",
     "dayjs": "^1.11.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
