--- a/client/package.json
+++ b/client/package.json
@@ -1,54 +1,42 @@
 {
-  "name": "client",
+  "name": "mantine-minimal-next-template",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@react-spring/web": "^9.5.5",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "@types/d3-time-format": "^4.0.0",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.13",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@types/styled-components": "^5.1.26",
-    "@visx/curve": "^2.1.0",
-    "@visx/pattern": "^2.10.0",
-    "@visx/text": "^2.12.2",
-    "@visx/xychart": "^3.3.0",
-    "axios": "^1.1.3",
-    "d3-time-format": "^4.1.0",
-    "dayjs": "^1.11.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "styled-components": "^5.3.6",
-    "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
-  },
   "scripts": {
-    "start": "HOST=localhost react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "dependencies": {
+    "@mantine/core": "7.2.2",
+    "@mantine/hooks": "7.2.2",
+    "@visx/axis": "^3.5.0",
+    "@visx/curve": "^3.3.0",
+    "@visx/grid": "^3.5.0",
+    "@visx/group": "^3.3.0",
+    "@visx/scale": "^3.5.0",
+    "@visx/shape": "^3.5.0",
+    "@visx/threshold": "^3.5.0",
+    "axios": "^1.6.2",
+    "dayjs": "^1.11.10",
+    "ldrs": "^1.0.1",
+    "next": "14.0.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "sharp": "^0.33.0"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "devDependencies": {
+    "@types/node": "20.8.10",
+    "@types/react": "18.2.35",
+    "@types/react-dom": "18.2.14",
+    "eslint": "8.53.0",
+    "eslint-config-next": "14.0.1",
+    "postcss": "^8.4.31",
+    "postcss-preset-mantine": "1.11.0",
+    "postcss-simple-vars": "^7.0.1",
+    "typescript": "5.2.2",
+    "zod": "^3.22.4"
+  },
+  "packageManager": "yarn@4.0.1"
 }
