--- a/infra/pyproject.toml
+++ b/infra/pyproject.toml
@@ -6,10 +6,21 @@ authors = ["Jai Smith <jksmithnyc@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.11"
-aws-cdk-lib = "^2.90.0"
 python-dotenv = "^1.0.0"
-constructs = "^10.2.69"
-
+aws-cdk-aws-dynamodb = "^1.204.0"
+aws-cdk-aws-lambda = "^1.204.0"
+aws-cdk-aws-events = "^1.204.0"
+aws-cdk-aws-events-targets = "^1.204.0"
+aws-cdk-aws-ecr = "^1.204.0"
+aws-cdk-aws-route53 = "^1.204.0"
+aws-cdk-aws-route53-targets = "^1.204.0"
+aws-cdk-aws-s3 = "^1.204.0"
+aws-cdk-aws-s3-deployment = "^1.204.0"
+aws-cdk-aws-certificatemanager = "^1.204.0"
+aws-cdk-aws-cloudfront = "^1.204.0"
+aws-cdk-aws-stepfunctions = "^1.204.0"
+aws-cdk-core = "^1.204.0"
+aws-cdk-aws-stepfunctions-tasks = "^1.204.0"
 
 [build-system]
 requires = ["poetry-core"]
