--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,7 @@
     "next": "^14",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sharp": "0.28"
+    "sharp": "^0.33.1"
   },
   "devDependencies": {
     "@types/node": "20.8.10",
