--- a/client/package.json
+++ b/client/package.json
@@ -15,16 +15,19 @@
     "@visx/axis": "^3.5.0",
     "@visx/brush": "^3.6.1",
     "@visx/curve": "^3.3.0",
+    "@visx/event": "^3.3.0",
     "@visx/grid": "^3.5.0",
     "@visx/group": "^3.3.0",
     "@visx/scale": "^3.5.0",
     "@visx/shape": "^3.5.0",
     "@visx/threshold": "^3.5.0",
+    "@visx/tooltip": "^3.3.0",
     "axios": "^1.6.2",
     "dayjs": "^1.11.10",
     "ldrs": "^1.0.1",
     "next": "^14",
     "react": "^18.2.0",
+    "react-animated-counter": "^1.7.3",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
