--- a/infra/pyproject.toml
+++ b/infra/pyproject.toml
@@ -7,8 +7,8 @@ authors = ["Jai Smith <jksmithnyc@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.11"
 python-dotenv = "^1.0.0"
-aws-cdk-lib = "^2.116.1"
-aws-cdk-aws-amplify-alpha = "^2.116.1a0"
+aws-cdk-lib = "^2.133.0"
+aws-cdk-aws-amplify-alpha = "^2.133.0-alpha.0"
 
 
 [build-system]
