--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mantine/core": "7.2.2",
-    "@mantine/hooks": "7.2.2",
+    "@mantine/core": "^7.7.2",
+    "@mantine/hooks": "^7.7.2",
     "@tabler/icons-react": "^2.44.0",
     "@visx/axis": "^3.5.0",
     "@visx/brush": "^3.6.1",
