--- a/infra/pyproject.toml
+++ b/infra/pyproject.toml
@@ -3,6 +3,7 @@ name = "flowcast/infra"
 version = "0.1.0"
 description = ""
 authors = ["Jai Smith <jksmithnyc@gmail.com>"]
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.11"
