--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -25,6 +25,9 @@ torch = [
 ]
 awslambdaric = "^2.0.5"
 aws-lambda-powertools = "^2.37.0"
+langchain = "^0.1.19"
+jq = "^1.7.0"
+langchain-aws = "^0.1.3"
 
 [tool.poetry.group.dev.dependencies]
 ipywidgets = "^8.1.0"
