--- a/client/package.json
+++ b/client/package.json
@@ -25,12 +25,15 @@
     "axios": "^1.6.2",
     "dayjs": "^1.11.10",
     "ldrs": "^1.0.1",
+    "mapbox-gl": "^3.3.0",
     "next": "^14",
     "react": "^18.2.0",
     "react-animated-counter": "^1.7.3",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-map-gl": "^7.1.7"
   },
   "devDependencies": {
+    "@types/mapbox-gl": "^3.1.0",
     "@types/node": "20.8.10",
     "@types/react": "18.2.35",
     "@types/react-dom": "18.2.14",
