--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "prepare": "yarn workspaces foreach -A run install",
     "deploy": "run prepare && yarn workspace @flowcast/infra run deploy"
   },
-  "packageManager": "yarn@4.0.2"
+  "packageManager": "yarn@4.0.2",
+  "dependencies": {
+    "react-text-reveal": "^1.1.2"
+  }
 }
