--- a/infra/package.json
+++ b/infra/package.json
@@ -1,9 +1,29 @@
 {
   "name": "@flowcast/infra",
+  "version": "0.1.0",
+  "bin": "dist/app.js",
   "scripts": {
-    "install": "poetry install",
-    "synth": "poetry run cdk synth",
-    "deploy": "poetry run cdk deploy --profile default"
+    "build": "tsc",
+    "watch": "tsc -w",
+    "test": "jest",
+    "cdk": "cdk",
+    "synth": "cdk synth",
+    "deploy": "cdk deploy"
   },
-  "packageManager": "yarn@4.0.2"
+  "devDependencies": {
+    "@types/jest": "^29.5.12",
+    "@types/node": "20.12.7",
+    "aws-cdk": "2.140.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
+    "typescript": "~5.4.5"
+  },
+  "dependencies": {
+    "@aws-cdk/aws-amplify-alpha": "^2.141.0-alpha.0",
+    "aws-cdk-lib": "2.140.0",
+    "constructs": "^10.0.0",
+    "dotenv": "^16.4.5",
+    "source-map-support": "^0.5.21"
+  }
 }
