--- a/infra/package.json
+++ b/infra/package.json
@@ -21,7 +21,8 @@
   },
   "dependencies": {
     "@aws-cdk/aws-amplify-alpha": "^2.141.0-alpha.0",
-    "aws-cdk-lib": "2.140.0",
+    "aws-cdk-lib": "^2.141.0",
+    "cdk-nextjs-standalone": "^4.0.0-beta.29",
     "constructs": "^10.0.0",
     "dotenv": "^16.4.5",
     "source-map-support": "^0.5.21"
