--- a/client/package.json
+++ b/client/package.json
@@ -34,7 +34,7 @@
   },
   "devDependencies": {
     "@types/mapbox-gl": "^3.1.0",
-    "@types/node": "20.8.10",
+    "@types/node": "^20.12.11",
     "@types/react": "18.2.35",
     "@types/react-dom": "18.2.14",
     "eslint": "8.53.0",
