--- a/infra/package.json
+++ b/infra/package.json
@@ -12,7 +12,7 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
-    "@types/node": "20.12.7",
+    "@types/node": "^20.12.11",
     "aws-cdk": "2.140.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
@@ -26,5 +26,6 @@
     "constructs": "^10.0.0",
     "dotenv": "^16.4.5",
     "source-map-support": "^0.5.21"
-  }
+  },
+  "packageManager": "yarn@4.0.2"
 }
