--- a/infra/tsconfig.json
+++ b/infra/tsconfig.json
@@ -23,6 +23,8 @@
     "typeRoots": [
       "./node_modules/@types"
     ],
+    "skipLibCheck": true,
+    "esModuleInterop": true,
     "outDir": "dist"
   },
   "exclude": [
