clean up old exports

--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-cloudfront": "^3.577.0",
     "@mantine/core": "^7.7.2",
     "@mantine/hooks": "^7.7.2",
     "@tabler/icons-react": "^2.44.0",
